added pages and css

--- a/index.html
+++ b/index.html
@@ -2,21 +2,30 @@
 https://developers.google.com/web/fundamentals/native-hardware/click-to-call/
 https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_common_layouts_using_CSS_Grid_Layout -->
 
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Kent Han</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="main.css">
+	</head>
+
 <div class="wrapper">
         <header class="main-head">
           <h1>Kent Han</h1>
-          <h3>Software Engineer Student Experimentalist</h3>
+          <h3>Software Engineer, Student, & Experimentalist</h3>
         </header>
         <nav class="main-nav">
             <ul>
-                <li><a href="">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
         <article class="content">
-            <h1>Main article area</h1>
-            <p>In this layout, we display the areas in source order for any screen less that 500 pixels wide. We go to a two column layout, and then to a three column layout by redefining the grid, and the placement of items on the grid.</p>
+            <h1>About me</h1>
+            <p>I am a 4th year Software Engineering Major at University of California, Irvine and a Software Engineering intern at ScaleFlux Inc. </p>
         </article>
         <aside class="side">Sidebar</aside>
         <div class="ad">Advertising</div>
