changed pages and grid

--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_commo
 		</nav>
 		<article class="content">
             <h1>Resume</h1>
-			<p>I am a 4th year Software Engineering Major at University of California, Irvine and a Software Engineering intern at ScaleFlux Inc. </p>
+			<embed src="KentHan.pdf" width="500" height="375" type='application/pdf'>
 		</article>
 		<aside class="side">Sidebar</aside>
 		<div class="ad">Advertising</div>
@@ -36,6 +36,6 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_commo
 
 			</address>
 			<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
-</footer>
+            <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
+        </footer>
 </div>
