--- a/index.html
+++ b/index.html
@@ -11,31 +11,34 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_commo
 	</head>
 
 <div class="wrapper">
-        <header class="main-head">
-          <h1>Kent Han</h1>
-          <h3>Software Engineer, Student, & Experimentalist</h3>
-        </header>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
-        <article class="content">
-            <h1>About me</h1>
-            <p>I am a 4th year Software Engineering Major at University of California, Irvine and a Software Engineering intern at ScaleFlux Inc. </p>
-        </article>
-        <aside class="side">Sidebar</aside>
-        <div class="ad">Advertising</div>
-        <footer class="main-footer">Contact
-            <address>
-                <a href="kenth1@uci.edu">kenth1@uci.edu</a>
-                <a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
+    <header class="main-head">
+      <h1>Kent Han</h1>
+      <h3>Software Engineer, Student, & Experimentalist</h3>
+    </header>
+    <nav class="main-nav">
+        <ul>
+            <li><a href="index.html">About</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="skills.html">Skills</a></li>
+        </ul>
+    </nav>
+    <article class="content">
+        <h1>About me</h1>
+        <p>I am a 4th year Software Engineering Major at University of California, Irvine and a Software Engineering intern at ScaleFlux Inc. </p>
+    </article>
+    <aside class="side">
+        <a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a>
+        <p>Find me on LinkedIn</p>
+        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
+    </aside>
 
-            </address>
-            <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
-  </footer>
+    <footer class="main-footer">Contact
+        <address>
+            <a href="kenth1@uci.edu">kenth1@uci.edu</a>
+            <a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
+
+        </address>
+
+    </footer>
 </div>
