added responsive photo

--- a/experience.html
+++ b/experience.html
@@ -11,31 +11,45 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_commo
 	</head>
 
 <div class="wrapper">
-		<header class="main-head">
-		<h1>Kent Han</h1>
-		<h3>Software Engineer, Student, & Experimentalist</h3>
-		</header>
-		<nav class="main-nav">
-			<ul>
-				<li><a href="index.html">About</a></li>
-				<li><a href="">Projects</a></li>
-				<li><a href="resume.html">Resume</a></li>
-				<li><a href="">Contact</a></li>
-			</ul>
-		</nav>
-		<article class="content">
-            <h1>Resume</h1>
-			<embed src="KentHan.pdf" width="500" height="375" type='application/pdf'>
-		</article>
-		<aside class="side">Sidebar</aside>
-		<div class="ad">Advertising</div>
-		<footer class="main-footer">Contact
-			<address>
-				<a href="kenth1@uci.edu">kenth1@uci.edu</a>
-				<a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
+	<header class="main-head">
+	<h1>Kent Han</h1>
+	<h3>Software Engineer, Student, & Experimentalist</h3>
+	</header>
+	<nav class="main-nav">
+		<ul>
+			<li><a href="index.html">About</a></li>
+			<li><a href="experience.html">Experience</a></li>
+			<li><a href="skills.html">Skills</a></li>
+		</ul>
+	</nav>
+	<article class="content">
+        <h1>Experience</h1>
+        <h4>ScaleFlux Software Engineering Intern, San Jose</h4>
+        <h6>July 2017 - Present</h4>
+		<p>• Designed and implemented solutions to deliver critical path features such as power cycling, test logging, network fault tolerance, and more to Manufacturing Acceptance Testing software.<br>
+• Proposed system redesigns and alternative test flow strategies for improved robustness and scalability.<br>
+• Coordinated with various team members to contribute to the successful GA launch of the company product.<br>
+• Developed skills in Bash scripting and HTML/CSS to migrate portions of a Python based log analyzing tool to Bash.<br>
+• Integrated various feature enhancements and redesigned HTML output dashboard.</p>
 
-			</address>
-			<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-            <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
-        </footer>
+        <h4>A.T. Works Intern, Toyama Japan</h4>
+		<h6>June 2016 - September 2016</h4>
+		<p>• Led initial testing of partner developed cloud storage hub and compiled regular oral and written reports identifying key functionality gaps and issues throughout the bug fixing process.<br>
+• Completed pre-release testing of hardware Load Balancer from setting up dummy testing web servers to covering hundreds of QA criteria.</p>
+	</article>
+	<aside class="side">
+		<a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a>
+		<p>Find me on LinkedIn</p>
+		<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+		<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
+	</aside>
+
+	<footer class="main-footer">Contact
+		<address>
+			<a href="kenth1@uci.edu">kenth1@uci.edu</a>
+			<a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
+
+		</address>
+
+	</footer>
 </div>
