--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_commo
     </nav>
     <article class="content">
         <h1>About me</h1>
+        <img src="headshot.png"
+            alt="Profile Photo"
+            srcset="headshot-w200-h200.png 200w,
+            headshot-w400-h400.png 400w"
+            sizes="(min-width: 600px) 400px, 50vw">
         <p>I am a 4th year Software Engineering Major at University of California, Irvine and a Software Engineering intern at ScaleFlux Inc. </p>
     </article>
     <aside class="side">
