--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<!-- Learn about this code on MDN:
+<!--References
 https://developers.google.com/web/fundamentals/native-hardware/click-to-call/
-https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_common_layouts_using_CSS_Grid_Layout -->
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
+https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks
+https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_common_layouts_using_CSS_Grid_Layout
+by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
+
 
 <!DOCTYPE html>
 <html>
