--- a/experience.html
+++ b/experience.html
@@ -49,7 +49,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 
 	<footer class="main-footer">Contact
 		<address>
-			<a href="kenth1@uci.edu">kenth1@uci.edu</a>
+			<a href="mailto:kenth1@uci.edu">kenth1@uci.edu</a>
 			<a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
 
 		</address>
