--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 		</ul>
 	</nav>
 	<article class="content">
-        <h1>Experience</h1>
+        <h1>Work</h1>
         <h4>ScaleFlux Software Engineering Intern, San Jose</h4>
         <h6>July 2017 - Present</h4>
 		<p>• Designed and implemented solutions to deliver critical path features such as power cycling, test logging, network fault tolerance, and more to Manufacturing Acceptance Testing software.<br>
