--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
     <nav class="main-nav">
         <ul>
             <li><a href="index.html">About</a></li>
-            <li><a href="experience.html">Experience</a></li>
+            <li><a href="work.html">Work</a></li>
             <li><a href="skills.html">Skills</a></li>
         </ul>
     </nav>
