added user interviews

--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 	<article class="content">
         <h1>Work</h1>
         <h4>ScaleFlux Software Engineering Intern, San Jose</h4>
-        <h6>July 2017 - Present</h4>
+        <h6>July 2017 - Present</h6>
 		<p>• Designed and implemented solutions to deliver critical path features such as power cycling, test logging, network fault tolerance, and more to Manufacturing Acceptance Testing software.<br>
 • Proposed system redesigns and alternative test flow strategies for improved robustness and scalability.<br>
 • Coordinated with various team members to contribute to the successful GA launch of the company product.<br>
@@ -36,10 +36,23 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 • Integrated various feature enhancements and redesigned HTML output dashboard.</p>
 
         <h4>A.T. Works Intern, Toyama Japan</h4>
-		<h6>June 2016 - September 2016</h4>
+		<h6>June 2016 - September 2016</h6>
+		<p>• Led initial testing of partner developed cloud storage hub and compiled regular oral and written reports identifying key functionality gaps and issues throughout the bug fixing process.<br>
+• Completed pre-release testing of hardware Load Balancer from setting up dummy testing web servers to covering hundreds of QA criteria.</p>
+
+        <h4>Portfolio Website</h4>
+		<h6>September 2017 - December 2017</h6>
+		<h5>User Research</h5>
+		<a href="https://docs.google.com/spreadsheets/d/1GYI5eIZvpQhtsHQQryKa-9rNpv6tBz2vncU7hEPwvWU/edit#gid=1458759859">
+    		<section>
+	        	<h5>User Interviews</h2>
+	        	<p>User interviews were coducted to provide a qualitative understanding of how users approach portfolios.  The interviewees were asked questions about considerations they'd make if they were to make a portfolio of their own as well as expectations and concerns they'd have as users/viewers of a portfolio website.</p>
+    		</section>
+		</a>
 		<p>• Led initial testing of partner developed cloud storage hub and compiled regular oral and written reports identifying key functionality gaps and issues throughout the bug fixing process.<br>
 • Completed pre-release testing of hardware Load Balancer from setting up dummy testing web servers to covering hundreds of QA criteria.</p>
 	</article>
+
 	<aside class="side">
 		<a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a>
 		<p>Find me on LinkedIn</p>
