--- a/work.html
+++ b/work.html
@@ -49,8 +49,12 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 	        	<p>User interviews were coducted to provide a qualitative understanding of how users approach portfolios.  The interviewees were asked questions about considerations they'd make if they were to make a portfolio of their own as well as expectations and concerns they'd have as users/viewers of a portfolio website.</p>
     		</section>
 		</a>
-		<p>• Led initial testing of partner developed cloud storage hub and compiled regular oral and written reports identifying key functionality gaps and issues throughout the bug fixing process.<br>
-• Completed pre-release testing of hardware Load Balancer from setting up dummy testing web servers to covering hundreds of QA criteria.</p>
+		<a href="https://docs.google.com/spreadsheets/d/1IzFk-hzrBRtnjyPMIlh5GwdNXAIuUgZBnyqfuneopeA/edit">
+			<section>
+				<h5>Competitor Analysis</h2>
+				<p>A Competitor Analysis was coducted to provide a qualitative understanding of other Software Engineer/Developer portfolios currently "on the market".  The analysis provided valuable infromation about stylistic trends and the relative importance of different kinds of content.</p>
+			</section>
+		</a>
 	</article>
 
 	<aside class="side">
