added feature value matrix

--- a/work.html
+++ b/work.html
@@ -55,6 +55,12 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 				<p>A Competitor Analysis was coducted to provide a qualitative understanding of other Software Engineer/Developer portfolios currently "on the market".  The analysis provided valuable infromation about stylistic trends and the relative importance of different kinds of content.</p>
 			</section>
 		</a>
+		<a href="https://docs.google.com/spreadsheets/d/1U0L7rS30Orl_ngE2qYoVQotdexPrUnYigMCzbwshG5A/edit#gid=2">
+			<section>
+				<h5>Feature Value Matrix</h2>
+				<p>A Feature Value Matrix was produced to quantify the relative value of various possible website feature by numerically ranking features in terms of severla different criteria.  This matrix provided a strong basis for understanfing and comparing the value added by different possible features.</p>
+			</section>
+		</a>
 	</article>
 
 	<aside class="side">
