added Feature prioritization

--- a/work.html
+++ b/work.html
@@ -61,6 +61,12 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 				<p>A Feature Value Matrix was produced to quantify the relative value of various possible website feature by numerically ranking features in terms of severla different criteria.  This matrix provided a strong basis for understanfing and comparing the value added by different possible features.</p>
 			</section>
 		</a>
+		<a href="https://docs.google.com/presentation/d/1zuOmI1H6OeNqr3MflJqNs7AOEt86lFeDGaE7l0O_cZU/edit#slide=id.gd46c24b48_0_24">
+			<section>
+				<h5>Feature Prioritization</h2>
+				<p>The potential features of this portfolio website were visually organized based on the scores from the Feature Value Matrix in order to help inform the foundational building blocks and starting points for this portfolio.</p>
+			</section>
+		</a>
 	</article>
 
 	<aside class="side">
