added user stroies

--- a/work.html
+++ b/work.html
@@ -67,6 +67,13 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 				<p>The potential features of this portfolio website were visually organized based on the scores from the Feature Value Matrix in order to help inform the foundational building blocks and starting points for this portfolio.</p>
 			</section>
 		</a>
+		<h5>User Testing</h5>
+		<a href="https://docs.google.com/spreadsheets/d/1GYI5eIZvpQhtsHQQryKa-9rNpv6tBz2vncU7hEPwvWU/edit#gid=1458759859">
+			<section>
+				<h5>User Stories</h2>
+				<p>User Stories were created to organize and brain storm how actual users would interact with the site.</p>
+			</section>
+		</a>
 	</article>
 
 	<aside class="side">
