put portfolio in diff page

--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 	<nav class="main-nav">
 		<ul>
 			<li><a href="index.html">About</a></li>
-			<li><a href="experience.html">Experience</a></li>
+			<li><a href="work.html">Experience</a></li>
 			<li><a href="skills.html">Skills</a></li>
 		</ul>
 	</nav>
@@ -40,9 +40,11 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 		<p>• Led initial testing of partner developed cloud storage hub and compiled regular oral and written reports identifying key functionality gaps and issues throughout the bug fixing process.<br>
 • Completed pre-release testing of hardware Load Balancer from setting up dummy testing web servers to covering hundreds of QA criteria.</p>
 
+		<a href="porfolio.html">
         <h4>Portfolio Website</h4>
 		<h6>September 2017 - December 2017</h6>
 		<h5>User Research</h5>
+		</a>
 		<a href="https://docs.google.com/spreadsheets/d/1GYI5eIZvpQhtsHQQryKa-9rNpv6tBz2vncU7hEPwvWU/edit#gid=1458759859">
     		<section>
 	        	<h5>User Interviews</h2>
