--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 	<nav class="main-nav">
 		<ul>
 			<li><a href="index.html">About</a></li>
-			<li><a href="experience.html">Experience</a></li>
+			<li><a href="work.html">Experience</a></li>
 			<li><a href="skills.html">Skills</a></li>
 		</ul>
 	</nav>
