--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 		<p>• Led initial testing of partner developed cloud storage hub and compiled regular oral and written reports identifying key functionality gaps and issues throughout the bug fixing process.<br>
 • Completed pre-release testing of hardware Load Balancer from setting up dummy testing web servers to covering hundreds of QA criteria.</p>
 
-		<a href="porfolio.html">
+		<a href="portfolio.html">
         <h4>Portfolio Website</h4>
 		<h6>September 2017 - December 2017</h6>
 		<h5>User Research</h5>
