added cognitive walk through

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
     </nav>
     <article class="content">
         <a href="work.html">
-            <h1>back to Work</h1>
+            <h3>back to Work</h3>
         </a>
         <h1>Portfolio Website</h1>
         <h6>September 2017 - December 2017</h6>
@@ -61,6 +61,12 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
             <section>
                 <h5>User Stories</h2>
                 <p>User Stories were created to organize and brain storm how actual users would interact with the site.</p>
+            </section>
+        </a>
+        <a href="https://docs.google.com/spreadsheets/d/1TCmWh1jbWg_CvNtPD2jmZFuR1CtW6j7o13oGBg-cOcs/edit#gid=0">
+            <section>
+                <h5>Cognitive Walkthrough</h2>
+                <p>In person cognitive walkthroughs were conducted to quickly identify pain points and usability flaws.  Prospective users were given simple tasks to complete on the website, and given followup questions to help elucidate areas where users struggled or did not use the site as intended.</p>
             </section>
         </a>
     </article>
