added task tests

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,12 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
                 <p>In person cognitive walkthroughs were conducted to quickly identify pain points and usability flaws.  Prospective users were given simple tasks to complete on the website, and given followup questions to help elucidate areas where users struggled or did not use the site as intended.</p>
             </section>
         </a>
+        <a href="">
+            <section>
+                <h5>User Tests</h2>
+                <p>Task based user testing was conducted via Usability Hub in order to quickly gather multiple reponses.  Heatmaped click testsing with follow up questions helped to reveal discrepancies between user expectations and actual functionalities in areas such as email and linked in contact options.</p>
+            </section>
+        </a>
     </article>
 
     <aside class="side">
