--- a/work.html
+++ b/work.html
@@ -44,38 +44,9 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
         <h4>Portfolio Website</h4>
 		<h6>September 2017 - December 2017</h6>
 		<h5>User Research</h5>
+		<p>UX research, testing, and design process</p>
 		</a>
-		<a href="https://docs.google.com/spreadsheets/d/1GYI5eIZvpQhtsHQQryKa-9rNpv6tBz2vncU7hEPwvWU/edit#gid=1458759859">
-    		<section>
-	        	<h5>User Interviews</h2>
-	        	<p>User interviews were coducted to provide a qualitative understanding of how users approach portfolios.  The interviewees were asked questions about considerations they'd make if they were to make a portfolio of their own as well as expectations and concerns they'd have as users/viewers of a portfolio website.</p>
-    		</section>
-		</a>
-		<a href="https://docs.google.com/spreadsheets/d/1IzFk-hzrBRtnjyPMIlh5GwdNXAIuUgZBnyqfuneopeA/edit">
-			<section>
-				<h5>Competitor Analysis</h2>
-				<p>A Competitor Analysis was coducted to provide a qualitative understanding of other Software Engineer/Developer portfolios currently "on the market".  The analysis provided valuable infromation about stylistic trends and the relative importance of different kinds of content.</p>
-			</section>
-		</a>
-		<a href="https://docs.google.com/spreadsheets/d/1U0L7rS30Orl_ngE2qYoVQotdexPrUnYigMCzbwshG5A/edit#gid=2">
-			<section>
-				<h5>Feature Value Matrix</h2>
-				<p>A Feature Value Matrix was produced to quantify the relative value of various possible website feature by numerically ranking features in terms of severla different criteria.  This matrix provided a strong basis for understanfing and comparing the value added by different possible features.</p>
-			</section>
-		</a>
-		<a href="https://docs.google.com/presentation/d/1zuOmI1H6OeNqr3MflJqNs7AOEt86lFeDGaE7l0O_cZU/edit#slide=id.gd46c24b48_0_24">
-			<section>
-				<h5>Feature Prioritization</h2>
-				<p>The potential features of this portfolio website were visually organized based on the scores from the Feature Value Matrix in order to help inform the foundational building blocks and starting points for this portfolio.</p>
-			</section>
-		</a>
-		<h5>User Testing</h5>
-		<a href="https://docs.google.com/spreadsheets/d/1GYI5eIZvpQhtsHQQryKa-9rNpv6tBz2vncU7hEPwvWU/edit#gid=1458759859">
-			<section>
-				<h5>User Stories</h2>
-				<p>User Stories were created to organize and brain storm how actual users would interact with the site.</p>
-			</section>
-		</a>
+
 	</article>
 
 	<aside class="side">
