--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
     </nav>
     <article class="content">
         <a href="work.html">
-            <h3>back to Work</h3>
+            <h3>Back to Work</h3>
         </a>
         <h1>Portfolio Website</h1>
         <h6>September 2017 - December 2017</h6>
@@ -41,7 +41,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
         <a href="https://docs.google.com/spreadsheets/d/1IzFk-hzrBRtnjyPMIlh5GwdNXAIuUgZBnyqfuneopeA/edit">
             <section>
                 <h5>Competitor Analysis</h2>
-                <p>A Competitor Analysis was coducted to provide a qualitative understanding of other Software Engineer/Developer portfolios currently "on the market".  The analysis provided valuable infromation about stylistic trends and the relative importance of different kinds of content.</p>
+                <p>A Competitor Analysis was conducted to provide a qualitative understanding of other Software Engineer/Developer portfolios currently "on the market".  The analysis provided valuable infromation about stylistic trends and the relative importance of different kinds of content.</p>
             </section>
         </a>
         <a href="https://docs.google.com/spreadsheets/d/1U0L7rS30Orl_ngE2qYoVQotdexPrUnYigMCzbwshG5A/edit#gid=2">
@@ -75,6 +75,17 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
                 <p>Task based user testing was conducted via Usability Hub in order to quickly gather multiple reponses.  Heatmaped click testsing with follow up questions helped to reveal discrepancies between user expectations and actual functionalities in areas such as email and linked in contact options.</p>
             </section>
         </a>
+        <h3>Summary of Findings</h3>
+        <p>This proccess of research and testing has provided the foundation for
+             the usability of this site.  Through inital User Research, I was ab
+             le to prioritize the feaures of the portfolio into approcheable seg
+             ments.  Through competitor analysis, I was able to visualize the lo
+             ok and feel of the site that I was hoping to achieve as well how th
+             at type of design would translate to site components and content st
+             ructuring.  This made it easier to start sketching out the overall
+             layout for the site.  By keeping responsive design in the forefront
+             , I was able to find layouts for the content that worked with varyi
+             ng screen sizes and user contexts.  </p>
     </article>
 
     <aside class="side">
