--- a/work.html
+++ b/work.html
@@ -43,8 +43,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 		<a href="portfolio.html">
         <h4>Portfolio Website</h4>
 		<h6>September 2017 - December 2017</h6>
-		<h5>User Research</h5>
-		<p>UX research, testing, and design process</p>
+		<p>• UX research, testing, and design process</p>
 		</a>
 
 	</article>
