--- a/portfolio.html
+++ b/portfolio.html
@@ -77,15 +77,34 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
         </a>
         <h3>Summary of Findings</h3>
         <p>This proccess of research and testing has provided the foundation for
-             the usability of this site.  Through inital User Research, I was ab
-             le to prioritize the feaures of the portfolio into approcheable seg
-             ments.  Through competitor analysis, I was able to visualize the lo
-             ok and feel of the site that I was hoping to achieve as well how th
-             at type of design would translate to site components and content st
-             ructuring.  This made it easier to start sketching out the overall
-             layout for the site.  By keeping responsive design in the forefront
-             , I was able to find layouts for the content that worked with varyi
-             ng screen sizes and user contexts.  </p>
+             the usability of this site.  Through inital User Research, I was able
+             to prioritize the feaures of the portfolio into approcheable segments.
+             Through competitor analysis, I was able to visualize the look and feel
+             of the site that I was hoping to achieve as well how that type of
+             design would translate to site components and content structuring.
+             This made it easier to start sketching out the overall layout for the
+             site.  By keeping responsive design in the forefront, I was able to
+             find layouts for the content that worked with varying screen sizes
+             and user contexts.  </p>
+        <p>Once the site had a working prototype, I was able to begin User Testing
+            which exposed a whole new layer to my understanding of the user experience
+            on this portfolio.  For example, in my prototype, ym email and phone
+            number were both clickable links.  If a user clicke don the email
+            address, it would launch the default email client for that device.
+            My orginial concern with this feature would be that users would not
+            trust this clickable link because they might not know what to expect
+            from it and therefore not use it.  My user testing however reavealed
+            that most user were aware of what clicking the link would do but still
+            prefered to manually copy and paste the address.  The reason that was
+            that most users did not actually use the default email client on their
+            device and instead would have preferd to use the web client through their
+            browser.</p>
+        <h3>Incorporation of Findings</h3>
+        <p>Thanks to user research and testing, I was able to come up with many
+            solutions for improving the usbaility of my portfoilio website.  One
+            example of this is the solution I implemented for the email link issue
+            described above in the Summary of Findings.  </p>
+
     </article>
 
     <aside class="side">
