--- a/portfolio.html
+++ b/portfolio.html
@@ -116,8 +116,10 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 
     <footer class="main-footer">Contact
         <address>
-            <a href="mailto:kenth1@uci.edu">kenth1@uci.edu</a>
-            <a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
+            <a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
+            <p><button class="js-emailcopybtn">Copy Email</button></p>
+            <a href="tel:+1-510-541-2477">Call me at +1 (510) 541-2477</a>
+            <p><button class="js-phonecopybtn">Copy Phonenumber</button></p>
 
         </address>
 
