--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
         <title>Kent Han</title>
         <!-- link to main stylesheet -->
         <link rel="stylesheet" type="text/css" href="main.css">
+        <script src="copy.js"></script>
     </head>
 
 <div class="wrapper">
@@ -119,7 +120,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
             <a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
             <p><button class="js-emailcopybtn">Copy Email</button></p>
             <a href="tel:+1-510-541-2477">Call me at +1 (510) 541-2477</a>
-            <p><button class="js-phonecopybtn">Copy Phonenumber</button></p>
+            <p><button class="js-phonecopybtn">Copy Phone Number</button></p>
 
         </address>
 
