--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
         <title>Kent Han</title>
         <!-- link to main stylesheet -->
         <link rel="stylesheet" type="text/css" href="main.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
         <script src="copy.js"></script>
     </head>
 
@@ -118,9 +119,9 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
     <footer class="main-footer">Contact
         <address>
             <a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
-            <p><button class="js-emailcopybtn">Copy Email</button></p>
+            <p><button class="btn" data-clipboard-text="kenth1@uci.edu">Copy Email</button></p>
             <a href="tel:+1-510-541-2477">Call me at +1 (510) 541-2477</a>
-            <p><button class="js-phonecopybtn">Copy Phone Number</button></p>
+            <p><button class="btn" data-clipboard-text="+1 (510) 541-2477">Copy Phone Number</button></p>
 
         </address>
 
