--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 https://developers.google.com/web/fundamentals/native-hardware/click-to-call/
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
 https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks
+https://css-tricks.com/native-browser-copy-clipboard/
 https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_common_layouts_using_CSS_Grid_Layout
 by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 
@@ -13,7 +14,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
-
+<body>
 <div class="wrapper">
     <header class="main-head">
       <h1>Kent Han</h1>
@@ -21,9 +22,9 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
     </header>
     <nav class="main-nav">
         <ul>
-            <li><a href="index.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="skills.html">Skills</a></li>
+            <li><a href="index.html"><button class="menu">About</button></a></li>
+            <li><a href="work.html"><button class="menu">Work</button></a></li>
+            <li><a href="skills.html"><button class="menu">Skills</button></a></li>
         </ul>
     </nav>
     <article class="content">
@@ -44,10 +45,13 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 
     <footer class="main-footer">Contact
         <address>
-            <a href="mailto:kenth1@uci.edu">kenth1@uci.edu</a>
-            <a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
+			<a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
+			<p><button class="btn" data-clipboard-text="kenth1@uci.edu">Copy Email</button></p>
+			<a href="tel:+1-510-541-2477">Call me at +1 (510) 541-2477</a>
+			<p><button class="btn" data-clipboard-text="+1 (510) 541-2477">Copy Phone Number</button></p>
 
         </address>
 
     </footer>
 </div>
+</body>
