--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,16 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
     </header>
     <nav class="main-nav">
         <ul>
-            <li><a href="index.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="skills.html">Skills</a></li>
+            <li><a href="index.html"><button class="menu">About</button></a></li>
+            <li><a href="work.html"><button class="menu">Work</button></a></li>
+            <li><a href="skills.html"><button class="menu">Skills</button></a></li>
         </ul>
     </nav>
     <article class="content">
         <a href="work.html">
+        <button class="back">
             <h3>Back to Work</h3>
+        </button>
         </a>
         <h1>Portfolio Website</h1>
         <h6>September 2017 - December 2017</h6>
@@ -37,46 +39,53 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
         <a href="https://docs.google.com/spreadsheets/d/1GYI5eIZvpQhtsHQQryKa-9rNpv6tBz2vncU7hEPwvWU/edit#gid=1458759859">
             <section>
                 <h5>User Interviews</h2>
-                <p>User interviews were coducted to provide a qualitative understanding of how users approach portfolios.  The interviewees were asked questions about considerations they'd make if they were to make a portfolio of their own as well as expectations and concerns they'd have as users/viewers of a portfolio website.</p>
             </section>
         </a>
+        <p>User interviews were coducted to provide a qualitative understanding of how users approach portfolios.  The interviewees were asked questions about considerations they'd make if they were to make a portfolio of their own as well as expectations and concerns they'd have as users/viewers of a portfolio website.</p>
+
         <a href="https://docs.google.com/spreadsheets/d/1IzFk-hzrBRtnjyPMIlh5GwdNXAIuUgZBnyqfuneopeA/edit">
             <section>
                 <h5>Competitor Analysis</h2>
-                <p>A Competitor Analysis was conducted to provide a qualitative understanding of other Software Engineer/Developer portfolios currently "on the market".  The analysis provided valuable infromation about stylistic trends and the relative importance of different kinds of content.</p>
             </section>
         </a>
+        <p>A Competitor Analysis was conducted to provide a qualitative understanding of other Software Engineer/Developer portfolios currently "on the market".  The analysis provided valuable infromation about stylistic trends and the relative importance of different kinds of content.</p>
+
         <a href="https://docs.google.com/spreadsheets/d/1U0L7rS30Orl_ngE2qYoVQotdexPrUnYigMCzbwshG5A/edit#gid=2">
             <section>
                 <h5>Feature Value Matrix</h2>
-                <p>A Feature Value Matrix was produced to quantify the relative value of various possible website feature by numerically ranking features in terms of severla different criteria.  This matrix provided a strong basis for understanfing and comparing the value added by different possible features.</p>
             </section>
         </a>
+        <p>A Feature Value Matrix was produced to quantify the relative value of various possible website feature by numerically ranking features in terms of severla different criteria.  This matrix provided a strong basis for understanfing and comparing the value added by different possible features.</p>
+
         <a href="https://docs.google.com/presentation/d/1zuOmI1H6OeNqr3MflJqNs7AOEt86lFeDGaE7l0O_cZU/edit#slide=id.gd46c24b48_0_24">
             <section>
                 <h5>Feature Prioritization</h2>
-                <p>The potential features of this portfolio website were visually organized based on the scores from the Feature Value Matrix in order to help inform the foundational building blocks and starting points for this portfolio.</p>
             </section>
         </a>
+        <p>The potential features of this portfolio website were visually organized based on the scores from the Feature Value Matrix in order to help inform the foundational building blocks and starting points for this portfolio.</p>
+
         <h3>User Testing</h3>
         <a href="https://docs.google.com/spreadsheets/d/1GYI5eIZvpQhtsHQQryKa-9rNpv6tBz2vncU7hEPwvWU/edit#gid=1458759859">
             <section>
                 <h5>User Stories</h2>
-                <p>User Stories were created to organize and brain storm how actual users would interact with the site.</p>
             </section>
         </a>
+        <p>User Stories were created to organize and brain storm how actual users would interact with the site.</p>
+
         <a href="https://docs.google.com/spreadsheets/d/1TCmWh1jbWg_CvNtPD2jmZFuR1CtW6j7o13oGBg-cOcs/edit#gid=0">
             <section>
                 <h5>Cognitive Walkthrough</h2>
-                <p>In person cognitive walkthroughs were conducted to quickly identify pain points and usability flaws.  Prospective users were given simple tasks to complete on the website, and given followup questions to help elucidate areas where users struggled or did not use the site as intended.</p>
             </section>
         </a>
+        <p>In person cognitive walkthroughs were conducted to quickly identify pain points and usability flaws.  Prospective users were given simple tasks to complete on the website, and given followup questions to help elucidate areas where users struggled or did not use the site as intended.</p>
+
         <a href="">
             <section>
                 <h5>User Tests</h2>
-                <p>Task based user testing was conducted via Usability Hub in order to quickly gather multiple reponses.  Heatmaped click testsing with follow up questions helped to reveal discrepancies between user expectations and actual functionalities in areas such as email and linked in contact options.</p>
             </section>
         </a>
+        <p>Task based user testing was conducted via Usability Hub in order to quickly gather multiple reponses.  Heatmaped click testsing with follow up questions helped to reveal discrepancies between user expectations and actual functionalities in areas such as email and linked in contact options.</p>
+
         <h3>Summary of Findings</h3>
         <p>This proccess of research and testing has provided the foundation for
              the usability of this site.  Through inital User Research, I was able
