--- a/skills.html
+++ b/skills.html
@@ -20,9 +20,9 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 	</header>
 	<nav class="main-nav">
 		<ul>
-			<li><a href="index.html">About</a></li>
-			<li><a href="work.html">Work</a></li>
-			<li><a href="skills.html">Skills</a></li>
+			<li><a href="index.html"><button class="menu">About</button></a></li>
+			<li><a href="work.html"><button class="menu">Work</button></a></li>
+			<li><a href="skills.html"><button class="menu">Skills</button></a></li>
 		</ul>
 	</nav>
 	<article class="content">
@@ -44,8 +44,10 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 
 	<footer class="main-footer">Contact
 		<address>
-			<a href="mailto:kenth1@uci.edu">kenth1@uci.edu</a>
-			<a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
+			<a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
+			<p><button class="btn" data-clipboard-text="kenth1@uci.edu">Copy Email</button></p>
+			<a href="tel:+1-510-541-2477">Call me at +1 (510) 541-2477</a>
+			<p><button class="btn" data-clipboard-text="+1 (510) 541-2477">Copy Phone Number</button></p>
 
 		</address>
 
