fin incorp and linkedin

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
         </a>
         <p>In person cognitive walkthroughs were conducted to quickly identify pain points and usability flaws.  Prospective users were given simple tasks to complete on the website, and given followup questions to help elucidate areas where users struggled or did not use the site as intended.</p>
 
-        <a href="">
+        <a href="https://usabilityhub.com/tests/bb36af1a104c/results">
             <section>
                 <h5>User Tests</h2>
             </section>
@@ -114,18 +114,28 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
         <p>Thanks to user research and testing, I was able to come up with many
             solutions for improving the usbaility of my portfoilio website.  One
             example of this is the solution I implemented for the email link issue
-            described above in the Summary of Findings.  </p>
+            described above in the Summary of Findings.  I added a button for copying
+            the email address to the clipboard and modifed the link text to clarify
+            the action that would be caused by clicking it.  I also did the same
+            for the phone number.  </p>
+        <p>Another area that was changed for user testing was the LinkedIn link.
+            the prior design had a text that said find me in linked in, followed
+            by a small LinkedIn icon.  Javascript was used so that when clicked,
+            the icon would open a small popup with a profile overview and a link
+            to my profile.  Cognitive walkthroughs revealed that some users would
+            have expected a click on the text to take them to the profile, or to
+            be taken directly once they clicked the icon.  I addressed this issue
+            by simply turning the item into a link that fit stylistically with the
+            rest of the site.  </p>
 
     </article>
 
     <aside class="side">
-        <a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a>
-        <p>Find me on LinkedIn</p>
-        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
+        <a href="KentHan.pdf" download="KentHanResume.pdf">Download my Resume</a>
+        <a href="https://www.linkedin.com/in/kent-han-449b62148">Find me on LinkedIn</a>
     </aside>
 
-    <footer class="main-footer">Contact
+    <footer class="main-footer"><h3>Contact</h3>
         <address>
             <a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
             <p><button class="btn" data-clipboard-text="kenth1@uci.edu">Copy Email</button></p>
