--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 		<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
 	</aside>
 
-	<footer class="main-footer">Contact
+	<footer class="main-footer"><h3>Contact</h3>
 		<address>
 			<a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
 			<p><button class="btn" data-clipboard-text="kenth1@uci.edu">Copy Email</button></p>
