--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
         <p>I am a 4th year Software Engineering Major at University of California, Irvine and a Software Engineering intern at ScaleFlux Inc. </p>
     </article>
     <aside class="side">
+		<h3>Connect</h3>
         <a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a>
-        <p>Find me on LinkedIn</p>
-        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
+		<a href="https://www.linkedin.com/in/kent-han-449b62148">Find me on LinkedIn</a>
+		<a href="https://github.com/k-m-h">See my public work on GitHub</a>
     </aside>
 
     <footer class="main-footer"><h3>Contact</h3>
