--- a/skills.html
+++ b/skills.html
@@ -37,9 +37,8 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 	</article>
 	<aside class="side">
 		<a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a>
-		<p>Find me on LinkedIn</p>
-		<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-		<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/kent-han-449b62148" data-format="click" data-related="false"></script>
+		<a href="https://www.linkedin.com/in/kent-han-449b62148">Find me on LinkedIn</a>
+		<a href="https://github.com/k-m-h">See my public work on GitHub</a>
 	</aside>
 
 	<footer class="main-footer"><h3>Contact</h3>
