--- a/work.html
+++ b/work.html
@@ -49,9 +49,9 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 	</article>
 
 	<aside class="side">
-		<a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a>
-		<a href="https://www.linkedin.com/in/kent-han-449b62148">Find me on LinkedIn</a>
-		<a href="https://github.com/k-m-h">See my public work on GitHub</a>
+		<p><a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a></p>
+		<p><a href="https://www.linkedin.com/in/kent-han-449b62148">Find me on LinkedIn</a></p>
+		<p><a href="https://github.com/k-m-h">See my public work on GitHub</a></p>
 	</aside>
 
 	<footer class="main-footer"><h3>Contact</h3>
