--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 <div class="wrapper">
     <header class="main-head">
       <h1>Kent Han</h1>
-      <h3>Software Engineer, Student, & Experimentalist</h3>
+      <h3>Software Engineer, Student, & <a href="https://soundcloud.com/m1kutom1k3y">Musician</a></h3>
     </header>
     <nav class="main-nav">
         <ul>
