added connect title and changed music

--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 <div class="wrapper">
 	<header class="main-head">
 	<h1>Kent Han</h1>
-	<h3>Software Engineer, Student, & <a href="https://soundcloud.com/m1kutom1k3y">Musician</a></h3>
+	<h3>Software Engineer, Student, & <a href="https://soundcloud.com/m1kutom1k3y">Music Producer</a></h3>
 	</header>
 	<nav class="main-nav">
 		<ul>
@@ -49,6 +49,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 	</article>
 
 	<aside class="side">
+		<h3>Connect</h3>
 		<p><a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a></p>
 		<p><a href="https://www.linkedin.com/in/kent-han-449b62148">Find me on LinkedIn</a></p>
 		<p><a href="https://github.com/k-m-h">See my public work on GitHub</a></p>
