--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
             srcset="headshot-w200-h200.png 200w,
             headshot-w400-h400.png 400w"
             sizes="(min-width: 600px) 400px, 50vw">
-        <p>I am a 4th year Software Engineering Major at University of California, Irvine and a Software Engineering intern at ScaleFlux Inc. </p>
+        <p>I am a 4th year Software Engineering Major at University of California,
+			Irvine and a Software Engineering intern at ScaleFlux Inc. </p>
+		<p>Hiring? I'll be graduating in June of 2018(hint hint)!  Feel free to contact me.</p>
+		<p>In my free time I like to produce music, read, and drink coffee.</p>
     </article>
     <aside class="side">
 		<h3>Connect</h3>
