--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 https://developers.google.com/web/fundamentals/native-hardware/click-to-call/
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
 https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks
+http://www.developerdrive.com/2015/01/8-simple-css-hover-effects/
 https://css-tricks.com/native-browser-copy-clipboard/
 https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_common_layouts_using_CSS_Grid_Layout
 by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
@@ -41,17 +42,17 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
     </article>
     <aside class="side">
 		<h3>Connect</h3>
-        <p><a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a></p>
+        <p><a href="KentHan.pdf" download="KentHanResume.pdf">Download my Resume</a></p>
 		<p><a href="https://www.linkedin.com/in/kent-han-449b62148">Find me on LinkedIn</a></p>
 		<p><a href="https://github.com/k-m-h">See my public work on GitHub</a></p>
     </aside>
 
     <footer class="main-footer"><h3>Contact</h3>
         <address>
-			<a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
-			<p><button class="btn" data-clipboard-text="kenth1@uci.edu">Copy Email</button></p>
-			<a href="tel:+1-510-541-2477">Call me at +1 (510) 541-2477</a>
-			<p><button class="btn" data-clipboard-text="+1 (510) 541-2477">Copy Phone Number</button></p>
+			<p><a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
+			<button class="btn" data-clipboard-text="kenth1@uci.edu">Copy Email</button></p>
+			<p><a href="tel:+1-510-541-2477">Call me at +1 (510) 541-2477</a>
+			<button class="btn" data-clipboard-text="+1 (510) 541-2477">Copy Phone Number</button></p>
 
         </address>
 
