--- a/skills.html
+++ b/skills.html
@@ -2,6 +2,8 @@
 https://developers.google.com/web/fundamentals/native-hardware/click-to-call/
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
 https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks
+http://www.developerdrive.com/2015/01/8-simple-css-hover-effects/
+https://css-tricks.com/native-browser-copy-clipboard/
 https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Realizing_common_layouts_using_CSS_Grid_Layout
 by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 
@@ -37,7 +39,7 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 	</article>
 	<aside class="side">
 		<h3>Connect</h3>
-		<p><a href="KentHan.pdf" download="KentHanResume.pdf">Download Resume</a></p>
+		<p><a href="KentHan.pdf" download="KentHanResume.pdf">Download my Resume</a></p>
 		<p><a href="https://www.linkedin.com/in/kent-han-449b62148">Find me on LinkedIn</a></p>
 		<p><a href="https://github.com/k-m-h">See my public work on GitHub</a></p>
 	</aside>
