contact links adjusted

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 
     <footer class="main-footer"><h3>Contact</h3>
         <address>
-			<p><a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
+			Email me at <p><a href="mailto:kenth1@uci.edu">kenth1@uci.edu</a>
 			<button class="btn" data-clipboard-text="kenth1@uci.edu">Copy Email</button></p>
-			<p><a href="tel:+1-510-541-2477">Call me at +1 (510) 541-2477</a>
+			Call me at <p><a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
 			<button class="btn" data-clipboard-text="+1 (510) 541-2477">Copy Phone Number</button></p>
 
         </address>
