--- a/work.html
+++ b/work.html
@@ -59,9 +59,9 @@ by ferrybig, mfluehr, Konrud, aermolaev, teoli, rachelandrew-->
 
 	<footer class="main-footer"><h3>Contact</h3>
 		<address>
-			<a href="mailto:kenth1@uci.edu">Email me at kenth1@uci.edu</a>
+			Email me at <a href="mailto:kenth1@uci.edu">kenth1@uci.edu</a>
 			<p><button class="btn" data-clipboard-text="kenth1@uci.edu">Copy Email</button></p>
-			<a href="tel:+1-510-541-2477">Call me at +1 (510) 541-2477</a>
+			Call me at <a href="tel:+1-510-541-2477">+1 (510) 541-2477</a>
 			<p><button class="btn" data-clipboard-text="+1 (510) 541-2477">Copy Phone Number</button></p>
 
 		</address>
